additional_task_22
Асинхронные методы
