# internal/api/api.go
@@ -2,7 +2,6 @@ package api
 
 import (
 	"context"
-	"time"
 
 	"github.com/ozoncp/ocp-offer-api/internal/models"
 	"github.com/ozoncp/ocp-offer-api/internal/producer"
@@ -33,12 +32,12 @@ var (
 
 type offerAPI struct {
 	pb.UnimplementedOcpOfferApiServiceServer
-	repo         repo.IRepository
-	dataProducer producer.Producer
+	repo     repo.IRepository
+	producer producer.IProducer
 }
 
-func NewOfferAPI(r repo.IRepository, p producer.Producer) pb.OcpOfferApiServiceServer {
-	return &offerAPI{repo: r, dataProducer: p}
+func NewOfferAPI(r repo.IRepository, p producer.IProducer) pb.OcpOfferApiServiceServer {
+	return &offerAPI{repo: r, producer: p}
 }
 
 func (o *offerAPI) CreateOfferV1(ctx context.Context, req *pb.CreateOfferV1Request) (*pb.CreateOfferV1Response, error) {
@@ -60,13 +59,6 @@ func (o *offerAPI) CreateOfferV1(ctx context.Context, req *pb.CreateOfferV1Reque
 		log.Error().Err(err).Msg("CreateOfferV1 -- failed")
 
 		return nil, status.Error(codes.Internal, err.Error())
-	}
-
-	message := producer.CreateMessage(producer.Create, offerID, time.Now())
-
-	err = o.dataProducer.Send(message)
-	if err != nil {
-		log.Error().Err(err).Msg("CreateOfferV1 - failed to send message to kafka")
 	}
 
 	totalSuccessCreated.Inc()
@@ -120,7 +112,7 @@ func (o *offerAPI) DescribeOfferV1(ctx context.Context, req *pb.DescribeOfferV1R
 		return nil, status.Error(codes.InvalidArgument, err.Error())
 	}
 
-	offer, err := o.repo.DescribeOffer(ctx, req.OfferId)
+	offer, err := o.repo.DescribeOffer(ctx, req.Id)
 	if err != nil {
 		log.Error().Err(err).Msg("DescribeOfferV1 -- failed")
 
@@ -213,6 +205,8 @@ func (o *offerAPI) UpdateOfferV1(ctx context.Context, req *pb.UpdateOfferV1Reque
 	return &pb.UpdateOfferV1Response{}, nil
 }
 
+// ----------------------------------------------------------------
+
 func (o *offerAPI) RemoveOfferV1(ctx context.Context, req *pb.RemoveOfferV1Request) (*pb.RemoveOfferV1Response, error) {
 	if err := req.Validate(); err != nil {
 		log.Error().Err(err).Msg("RemoveOfferV1 - invalid argument")
@@ -220,7 +214,7 @@ func (o *offerAPI) RemoveOfferV1(ctx context.Context, req *pb.RemoveOfferV1Reque
 		return nil, status.Error(codes.InvalidArgument, err.Error())
 	}
 
-	if err := o.repo.RemoveOffer(ctx, req.OfferId); err != nil {
+	if err := o.repo.RemoveOffer(ctx, req.Id); err != nil {
 		log.Error().Err(err).Msg("RemoveOfferV1 -- failed")
 
 		return nil, status.Error(codes.Internal, err.Error())
@@ -231,4 +225,71 @@ func (o *offerAPI) RemoveOfferV1(ctx context.Context, req *pb.RemoveOfferV1Reque
 	log.Debug().Msg("RemoveOfferV1 - success")
 
 	return &pb.RemoveOfferV1Response{}, nil
+}
+
+// ----------------------------------------------------------------
+
+func (o *offerAPI) TaskCreateOfferV1(ctx context.Context, req *pb.TaskCreateOfferV1Request) (*pb.TaskCreateOfferV1Response, error) {
+	if err := req.Validate(); err != nil {
+		log.Error().Err(err).Msg("TaskCreateOfferV1 - invalid argument")
+
+		return nil, status.Error(codes.InvalidArgument, err.Error())
+	}
+
+	offer := models.Offer{
+		UserID: req.UserId,
+		Grade:  req.Grade,
+		TeamID: req.TeamId,
+	}
+
+	if err := o.producer.CreateOffer(offer); err != nil {
+		log.Error().Err(err).Msg("TaskCreateOfferV1 -- failed")
+
+		return nil, status.Error(codes.Internal, err.Error())
+	}
+
+	return &pb.TaskCreateOfferV1Response{}, nil
+}
+
+// ----------------------------------------------------------------
+
+func (o *offerAPI) TaskUpdateOfferV1(ctx context.Context, req *pb.TaskUpdateOfferV1Request) (*pb.TaskUpdateOfferV1Response, error) {
+	if err := req.Validate(); err != nil {
+		log.Error().Err(err).Msg("TaskUpdateOfferV1 - invalid argument")
+
+		return nil, status.Error(codes.InvalidArgument, err.Error())
+	}
+
+	data := models.Offer{
+		ID:     req.Id,
+		UserID: req.UserId,
+		Grade:  req.Grade,
+		TeamID: req.TeamId,
+	}
+
+	if err := o.producer.CreateOffer(data); err != nil {
+		log.Error().Err(err).Msg("TaskUpdateOfferV1 -- failed")
+
+		return nil, status.Error(codes.Internal, err.Error())
+	}
+
+	return &pb.TaskUpdateOfferV1Response{}, nil
+}
+
+// ----------------------------------------------------------------
+
+func (o *offerAPI) TaskRemoveOfferV1(ctx context.Context, req *pb.TaskRemoveOfferV1Request) (*pb.TaskRemoveOfferV1Response, error) {
+	if err := req.Validate(); err != nil {
+		log.Error().Err(err).Msg("TaskRemoveOfferV1 - invalid argument")
+
+		return nil, status.Error(codes.InvalidArgument, err.Error())
+	}
+
+	if err := o.producer.DeleteOffer(req.Id); err != nil {
+		log.Error().Err(err).Msg("TaskRemoveOfferV1 -- failed")
+
+		return nil, status.Error(codes.Internal, err.Error())
+	}
+
+	return &pb.TaskRemoveOfferV1Response{}, nil
 }
