# pkg/ocp-offer-api/ocp-offer-api.pb.validate.go
@@ -262,6 +262,161 @@ var _ interface {
 	ErrorName() string
 } = CreateOfferV1ResponseValidationError{}
 
+// Validate checks the field values on TaskCreateOfferV1Request with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *TaskCreateOfferV1Request) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	if m.GetUserId() <= 0 {
+		return TaskCreateOfferV1RequestValidationError{
+			field:  "UserId",
+			reason: "value must be greater than 0",
+		}
+	}
+
+	if m.GetGrade() <= 0 {
+		return TaskCreateOfferV1RequestValidationError{
+			field:  "Grade",
+			reason: "value must be greater than 0",
+		}
+	}
+
+	if m.GetTeamId() <= 0 {
+		return TaskCreateOfferV1RequestValidationError{
+			field:  "TeamId",
+			reason: "value must be greater than 0",
+		}
+	}
+
+	return nil
+}
+
+// TaskCreateOfferV1RequestValidationError is the validation error returned by
+// TaskCreateOfferV1Request.Validate if the designated constraints aren't met.
+type TaskCreateOfferV1RequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e TaskCreateOfferV1RequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e TaskCreateOfferV1RequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e TaskCreateOfferV1RequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e TaskCreateOfferV1RequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e TaskCreateOfferV1RequestValidationError) ErrorName() string {
+	return "TaskCreateOfferV1RequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e TaskCreateOfferV1RequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sTaskCreateOfferV1Request.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = TaskCreateOfferV1RequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = TaskCreateOfferV1RequestValidationError{}
+
+// Validate checks the field values on TaskCreateOfferV1Response with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *TaskCreateOfferV1Response) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	return nil
+}
+
+// TaskCreateOfferV1ResponseValidationError is the validation error returned by
+// TaskCreateOfferV1Response.Validate if the designated constraints aren't met.
+type TaskCreateOfferV1ResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e TaskCreateOfferV1ResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e TaskCreateOfferV1ResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e TaskCreateOfferV1ResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e TaskCreateOfferV1ResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e TaskCreateOfferV1ResponseValidationError) ErrorName() string {
+	return "TaskCreateOfferV1ResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e TaskCreateOfferV1ResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sTaskCreateOfferV1Response.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = TaskCreateOfferV1ResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = TaskCreateOfferV1ResponseValidationError{}
+
 // Validate checks the field values on MultiCreateOfferV1Request with the rules
 // defined in the proto definition for this message. If any rules are
 // violated, an error is returned.
@@ -421,9 +576,9 @@ func (m *DescribeOfferV1Request) Validate() error {
 		return nil
 	}
 
-	if m.GetOfferId() <= 0 {
+	if m.GetId() <= 0 {
 		return DescribeOfferV1RequestValidationError{
-			field:  "OfferId",
+			field:  "Id",
 			reason: "value must be greater than 0",
 		}
 	}
@@ -902,6 +1057,168 @@ var _ interface {
 	ErrorName() string
 } = UpdateOfferV1ResponseValidationError{}
 
+// Validate checks the field values on TaskUpdateOfferV1Request with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *TaskUpdateOfferV1Request) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	if m.GetId() <= 0 {
+		return TaskUpdateOfferV1RequestValidationError{
+			field:  "Id",
+			reason: "value must be greater than 0",
+		}
+	}
+
+	if m.GetUserId() <= 0 {
+		return TaskUpdateOfferV1RequestValidationError{
+			field:  "UserId",
+			reason: "value must be greater than 0",
+		}
+	}
+
+	if m.GetGrade() <= 0 {
+		return TaskUpdateOfferV1RequestValidationError{
+			field:  "Grade",
+			reason: "value must be greater than 0",
+		}
+	}
+
+	if m.GetTeamId() <= 0 {
+		return TaskUpdateOfferV1RequestValidationError{
+			field:  "TeamId",
+			reason: "value must be greater than 0",
+		}
+	}
+
+	return nil
+}
+
+// TaskUpdateOfferV1RequestValidationError is the validation error returned by
+// TaskUpdateOfferV1Request.Validate if the designated constraints aren't met.
+type TaskUpdateOfferV1RequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e TaskUpdateOfferV1RequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e TaskUpdateOfferV1RequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e TaskUpdateOfferV1RequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e TaskUpdateOfferV1RequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e TaskUpdateOfferV1RequestValidationError) ErrorName() string {
+	return "TaskUpdateOfferV1RequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e TaskUpdateOfferV1RequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sTaskUpdateOfferV1Request.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = TaskUpdateOfferV1RequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = TaskUpdateOfferV1RequestValidationError{}
+
+// Validate checks the field values on TaskUpdateOfferV1Response with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *TaskUpdateOfferV1Response) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	return nil
+}
+
+// TaskUpdateOfferV1ResponseValidationError is the validation error returned by
+// TaskUpdateOfferV1Response.Validate if the designated constraints aren't met.
+type TaskUpdateOfferV1ResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e TaskUpdateOfferV1ResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e TaskUpdateOfferV1ResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e TaskUpdateOfferV1ResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e TaskUpdateOfferV1ResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e TaskUpdateOfferV1ResponseValidationError) ErrorName() string {
+	return "TaskUpdateOfferV1ResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e TaskUpdateOfferV1ResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sTaskUpdateOfferV1Response.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = TaskUpdateOfferV1ResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = TaskUpdateOfferV1ResponseValidationError{}
+
 // Validate checks the field values on RemoveOfferV1Request with the rules
 // defined in the proto definition for this message. If any rules are
 // violated, an error is returned.
@@ -910,9 +1227,9 @@ func (m *RemoveOfferV1Request) Validate() error {
 		return nil
 	}
 
-	if m.GetOfferId() <= 0 {
+	if m.GetId() <= 0 {
 		return RemoveOfferV1RequestValidationError{
-			field:  "OfferId",
+			field:  "Id",
 			reason: "value must be greater than 0",
 		}
 	}
@@ -1042,6 +1359,147 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = RemoveOfferV1ResponseValidationError{}
+
+// Validate checks the field values on TaskRemoveOfferV1Request with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *TaskRemoveOfferV1Request) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	if m.GetId() <= 0 {
+		return TaskRemoveOfferV1RequestValidationError{
+			field:  "Id",
+			reason: "value must be greater than 0",
+		}
+	}
+
+	return nil
+}
+
+// TaskRemoveOfferV1RequestValidationError is the validation error returned by
+// TaskRemoveOfferV1Request.Validate if the designated constraints aren't met.
+type TaskRemoveOfferV1RequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e TaskRemoveOfferV1RequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e TaskRemoveOfferV1RequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e TaskRemoveOfferV1RequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e TaskRemoveOfferV1RequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e TaskRemoveOfferV1RequestValidationError) ErrorName() string {
+	return "TaskRemoveOfferV1RequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e TaskRemoveOfferV1RequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sTaskRemoveOfferV1Request.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = TaskRemoveOfferV1RequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = TaskRemoveOfferV1RequestValidationError{}
+
+// Validate checks the field values on TaskRemoveOfferV1Response with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *TaskRemoveOfferV1Response) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	return nil
+}
+
+// TaskRemoveOfferV1ResponseValidationError is the validation error returned by
+// TaskRemoveOfferV1Response.Validate if the designated constraints aren't met.
+type TaskRemoveOfferV1ResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e TaskRemoveOfferV1ResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e TaskRemoveOfferV1ResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e TaskRemoveOfferV1ResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e TaskRemoveOfferV1ResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e TaskRemoveOfferV1ResponseValidationError) ErrorName() string {
+	return "TaskRemoveOfferV1ResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e TaskRemoveOfferV1ResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sTaskRemoveOfferV1Response.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = TaskRemoveOfferV1ResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = TaskRemoveOfferV1ResponseValidationError{}
 
 // Validate checks the field values on PaginationInfo with the rules defined in
 // the proto definition for this message. If any rules are violated, an error
